--- a/internal/sass/navbar.scss
+++ b/internal/sass/navbar.scss
@@ -5,7 +5,7 @@
 .navbar.nav-cc {
   background-color: #333;
   a {
-    color: #ffe090;
+    color: #52bae3;
   }
   .nav-link{
     padding: 5px 20px;
@@ -26,7 +26,7 @@
     cursor: pointer;
     border: 1px solid #333;
     background-color: transparent;
-    background-image: url("/static/images/search_icon_gold.png");
+    background-image: url("/static/images/search_icon_blue.png");
     background-repeat: no-repeat;
     background-size: contain;
     transition: width 0.6s ease, background-color 0.6s ease;
