--- a/internal/sass/main.scss
+++ b/internal/sass/main.scss
@@ -1,3 +1,13 @@
 @import "./header";
 @import "./navbar";
 @import "./logo";
+
+.main-content {
+  padding: 20px 5px;
+  margin: 5rem auto auto auto;
+  min-width: 600px;
+  width: 60%;
+  .top-summary {
+    font-size: 16pt;
+  }
+}
