--- a/internal/sass/main.scss
+++ b/internal/sass/main.scss
@@ -3,20 +3,40 @@
 @import "./logo";
 @import "./post";
 
-.main-content {
-  padding: 20px 5px;
-  margin: 5rem auto auto auto;
-  min-width: 600px;
-  width: 60%;
-  .top-summary {
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
-    padding: 0.5em 1em;
-    border: 1px solid grey;
-    border-radius: 4px;
-    font-size: 16pt;
-    li {
-      margin-top: 1em;
-      font-size: 12pt;
+@media screen and (min-width: 600px) {
+  .main-content {
+    padding: 20px 5px;
+    margin: 5rem auto auto auto;
+    min-width: 600px;
+    width: 60%;
+    .top-summary {
+      box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+      padding: 0.5em 1em;
+      border: 1px solid grey;
+      border-radius: 4px;
+      font-size: 16pt;
+      li {
+        margin-top: 1em;
+        font-size: 12pt;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-content {
+    padding: 20px 5px;
+    margin: 5rem auto auto auto;
+    .top-summary {
+      box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+      padding: 0.5em 1em;
+      border: 1px solid grey;
+      border-radius: 4px;
+      font-size: 16pt;
+      li {
+        margin-top: 1em;
+        font-size: 12pt;
+      }
     }
   }
 }
