--- a/internal/templates/common/header.html
+++ b/internal/templates/common/header.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=320, initial-scale=1">
   <title>{{ .Title }}</title>
   <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 {{ end }}
