--- a/internal/templates/common/navbar.html
+++ b/internal/templates/common/navbar.html
@@ -14,7 +14,7 @@
         <a class="nav-link animate {{if eq .Request.URL.Path "/about"}}active{{end}}" href="/about">About Me</a>
       </li>
       <li class="nav-item nav-search">
-        <input type="text" class="form-control nav-search__input" />
+        <input type="text" class="form-control nav-search__input"  placeholder="Search Posts"/>
       </li>
     </ul>
   </div>
