--- a/internal/sass/navbar.scss
+++ b/internal/sass/navbar.scss
@@ -1,16 +1,28 @@
 /*
   This is the file that holds scss for the navbar styles
 */
-
+.btn-outline-primary {
+  color: #52bae3;
+  border-color: #52bae3;
+  &:hover {
+    color: #fff;
+    background-color: darken(#52bae3, 20%);
+  }
+}
 .navbar.nav-cc {
   width: 100%;
   box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+
   .nav-wrapper {
     display: block;
   }
   background-color: #333;
   a {
     color: #52bae3;
+  }
+  .mobile-brand {
+    font-size: 1.25rem;
+    text-decoration: none;
   }
   .mobile {
     margin: 0.75em 0;
@@ -20,8 +32,12 @@
     .nav-search {
       padding-left: 20px;
     }
-    .nav-search__input {
-      margin: 0 auto;
+    .search_wrapper {
+      text-align:center;
+      .nav-search__input {
+        margin: 0 auto;
+        display: inline-block;
+      }
     }
   }
   .navbar-toggler {
@@ -31,7 +47,7 @@
   }
   .nav-link{
     padding: 5px 20px;
-    font-size: 16pt;
+    font-size: 14pt;
     &:hover, &.active {
       background-color: #555;
       border-radius: 1px;
@@ -54,6 +70,9 @@
       height: 0;
       display: block;
     }
+    .nav-search__submit {
+      display: none;
+    }
     .nav-search__input{
       padding: 5px 20px 5px 40px;
       width: 0px;
@@ -64,6 +83,7 @@
       background-color: transparent;
       background-repeat: no-repeat;
       background-size: contain;
+      display: inline-block;
       &.transition{
         transition: width 0.6s ease, background-color 0.6s ease;
       }
