--- a/internal/templates/common/navbar.html
+++ b/internal/templates/common/navbar.html
@@ -14,14 +14,17 @@
         <a class="nav-link animate {{if eq .Request.URL.Path "/about"}}active{{end}}" href="/about">About Me</a>
       </li>
       <li class="nav-item nav-search">
-        <input type="text" class="form-control nav-search__input"  placeholder="Search Posts"/>
+        <form action="/posts" method="GET">
+          <input type="text" name="q" class="form-control nav-search__input"  placeholder="Search Posts"/>
+          <input type="submit" value="Search" class="nav-search__submit btn btn-outline-primary"/>
+        </form>
       </li>
     </ul>
   </div>
   <button class="navbar-toggler hidden-lg-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Toggle navigation">
     Menu
   </button>
-  <a class="hidden-lg-up" href="#">CorvusCrypto <img class="logo-small-collapsed" src="/static/images/logo.png"/></a>
+  <a class="hidden-lg-up mobile-brand" href="/">CorvusCrypto <img class="logo-small-collapsed" src="/static/images/logo.png"/></a>
   <div class="collapse mobile navbar-toggleable-md hidden-lg-up visible-sc" id="collapsedMenu">
     <ul class="nav navbar-nav">
       <li class="nav-item">
@@ -34,9 +37,15 @@
         <a class="nav-link {{if eq .Request.URL.Path "/about"}}active{{end}}" href="/about">About Me</a>
       </li>23
       <li class="nav-item nav-search">
-        <input type="text" class="form-control nav-search__input" placeholder="Search Posts"/>
+        <div class="search_wrapper">
+          <form action="/posts" method="GET">
+            <input type="text" name="q" class="form-control nav-search__input" placeholder="Search Posts"/>
+            <input type="submit" value="Search" class="nav-search__submit btn btn-outline-primary"/>
+          </form>
+        </div>
       </li>
     </ul>
   </div>
 </nav>
+<script src="/static/js/nav_helper.js"></script>
 {{ end }}
