--- a/internal/sass/post.scss
+++ b/internal/sass/post.scss
@@ -36,3 +36,16 @@
     padding: 0.5em;
   }
 }
+
+.main-content {
+  .post {
+    .timestamp {
+      font-size: 14pt;
+      margin-left: 1rem;
+    }
+    .social-bar {
+      line-height: 10px;
+      float: right;
+    }
+  }
+}
