--- a/internal/templates/pages/about_me.html
+++ b/internal/templates/pages/about_me.html
@@ -1,7 +1,9 @@
 {{define "about"}}
 <!DOCTYPE html>
 <html>
-{{ template "header" .Header }}
+<head>
+  {{ template "header" .Header }}
+</head>
 <body>
   {{ template "navbar" . }}
   <div class="main-content">
