--- a/internal/templates/posts/card.html
+++ b/internal/templates/posts/card.html
@@ -3,7 +3,7 @@
     <a class="post-link" href="/posts/{{ .URL }}">
       <div class="post-card__header">
           <h2 class="header__title">
-            {{ .Date | date }} - {{ .Title }}
+            [{{ .Date | date }}] {{ .Title }}
           </h2>
       </div>
     </a>
