--- a/internal/templates/pages/index.html
+++ b/internal/templates/pages/index.html
@@ -1,7 +1,9 @@
 {{define "index"}}
 <!DOCTYPE html>
 <html>
-{{ template "header" .Header }}
+<head>
+  {{ template "header" .Header }}
+</head>
 <body>
   {{ template "navbar" . }}
   <div class="main-content">
