--- a/internal/sass/post.scss
+++ b/internal/sass/post.scss
@@ -36,9 +36,12 @@
     padding: 0.5em;
   }
 }
-
+.post {
+  font-size: 12pt;
+}
 .main-content {
   .post {
+    font-size: 12pt;
     .timestamp {
       font-size: 14pt;
       margin-left: 1rem;
