--- a/internal/templates/cms/edit_post.html
+++ b/internal/templates/cms/edit_post.html
@@ -8,7 +8,7 @@
   {{ template "cmsNavbar" . }}
   <div class="main-content">
     <h1>Editing Post</h1>
-    <form target="{{.Request.URL}}" method="POST">
+    <form target="{{.Request.URL}}" method="POST" id="post-form">
       <div class="form-group row">
         <label for="title" class="col-sm-3 col-form-label">Title</label>
         <div class="col-sm-9">
@@ -28,24 +28,61 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="Summary" class="col-sm-3 col-form-label">Summary</label>
+        <label for="summary" class="col-sm-3 col-form-label">Summary</label>
         <div class="col-sm-9">
-          <textarea class="form-control" rows="5" maxlength="250"></textarea>
+          <textarea class="form-control" rows="5" name="summary" maxlength="250"></textarea>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="post" class="col-sm-3 col-form-label">Post</label>
+        <div class="col-sm-9">
+          <a id="show-preview-btn" class="btn btn-secondary">
+            Show Preview
+          </a>
+          <br/>
+          <textarea class="form-control post-input" name="post"></textarea>
         </div>
       </div>
       <div class="form-group row">
         <div class="col-sm-3">
         </div>
         <div class="col-sm-9">
-          <input type="submit" name="action" value="Save" class="btn btn-primary">
-          <input type="submit" name="action" value="Save and Publish Later" class="btn btn-warning">
-          <input type="submit" name="action" value="Save and Publish Now" class="btn btn-success">
-          <input type="submit" name="action" value="Delete" class="btn btn-danger">
+          <input type="hidden" name="actionValue" value=""/>
+          <button data-value="0" class="btn submit-btn btn-primary">Save</button>
+          <button data-value="1" class="btn submit-btn btn-warning">Save and Publish Later</button>
+          <button data-value="2" class="btn submit-btn btn-success">Save and Publish Now</button>
+          <button data-value="3" class="btn submit-btn btn-danger">Delete</button>
         </div>
       </div>
     </form>
   </div>
+  <div class="modal fade preview">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="h3">Post Preview</h1>
+        </div>
+        <div class="modal-body">
+          HTML goes here! :7
+        </div>
+      </div>
+    </div>
+  </div>
   {{ template "footer" .}}
+  <script>
+    $(".submit-btn").click(function(e){
+      document.forms['post-form']['actionValue'].value = $(this).data('value');
+      e.preventDefault();
+    })
+    $("#show-preview-btn").click(function(e){
+      var content = "<div class='post'>";
+      content += document.forms['post-form']['post'].value;
+      content += "</div>";
+      $(".preview .modal-body").html(content)
+      $(".preview").modal("show");
+      e.preventDefault();
+    })
+  </script>
 </body>
 </html>
 {{end}}
