Added code highlighting. so cool

--- a/internal/templates/cms/common/navbar.html
+++ b/internal/templates/cms/common/navbar.html
@@ -10,7 +10,7 @@
         <a class="nav-link animate {{if eq .Request.URL.Path "/drafts"}}active{{end}}" href="/drafts">Drafts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link animate {{if eq .Request.URL.Path "/newpost"}}active{{end}}" href="/drafts">New Post</a>
+        <a class="nav-link animate {{if eq .Request.URL.Path "/newpost"}}active{{end}}" href="/newpost">New Post</a>
       </li>
     </ul>
   </div>
