--- a/internal/templates/common/footer.html
+++ b/internal/templates/common/footer.html
@@ -2,4 +2,6 @@
 <script src="/static/js/jquery.slim.min.js"></script>
 <script src="/static/js/tether.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js"></script>
 {{ end }}
