--- a/internal/templates/pages/posts.html
+++ b/internal/templates/pages/posts.html
@@ -8,10 +8,15 @@
   {{ template "navbar" . }}
   <div class="main-content">
     <h1> Blog Posts </h1>
-    {{ range .Posts }}
-      {{ template "posts.card" . }}
+    {{ if .Posts }}
+      {{ range .Posts }}
+        {{ template "posts.card" . }}
+      {{end}}
     {{ else }}
-    {{end}}
+      <p class="narrative">
+        Oops, there are no posts yet. Sorry 'bout that!
+      </p>
+    {{ end }}
   </div>
   {{ template "footer" . }}
 </body>
