--- a/internal/sass/main.scss
+++ b/internal/sass/main.scss
@@ -13,6 +13,7 @@
     .top-summary {
       box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
       padding: 0.5em 1em;
+      margin: 1em 0;
       border: 1px solid grey;
       border-radius: 4px;
       font-size: 16pt;
@@ -20,6 +21,13 @@
         margin-top: 1em;
         font-size: 12pt;
       }
+    }
+
+    .welcome-intro {
+      background-color: #ddd;
+      padding: 1.5em;
+      border-radius: 1em;
+      color: #111;
     }
 
   }
