removed blocking script load

--- a/internal/templates/common/footer.html
+++ b/internal/templates/common/footer.html
@@ -1,4 +1,5 @@
 {{ define "footer" }}
+<script src="/static/js/nav_helper.js"></script>
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
 <script>
