--- a/internal/templates/common/footer.html
+++ b/internal/templates/common/footer.html
@@ -1,10 +1,10 @@
 {{ define "footer" }}
-<script src="/static/js/nav_helper.js"></script>
+<script src="/static/js/nav_helper.js" async></script>
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
-<script src="/static/js/jquery.slim.min.js"></script>
-<script src="/static/js/tether.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery.slim.min.js" async></script>
+<script src="/static/js/tether.min.js" async></script>
+<script src="/static/js/bootstrap.min.js" async></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js" async></script>
 {{ end }}
