--- a/internal/templates/common/footer.html
+++ b/internal/templates/common/footer.html
@@ -1,7 +1,7 @@
 {{ define "footer" }}
 <script src="/static/js/nav_helper.js" async></script>
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-<link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
+<link href="{{ .Assets.CSS.URL }}" rel="stylesheet">
 <script src="/static/js/jquery.slim.min.js"></script>
 <script src="/static/js/tether.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
