--- a/internal/templates/posts/post_full.html
+++ b/internal/templates/posts/post_full.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="{{ .Post.Title | title }}" />
   <meta property="og:description" content="{{ .Post.Summary }}" />
   <meta property="og:image" content="http://www.corvuscrypto.com/static/images/logo_black.png" />
-  {{ template "header" .Header }}
+  {{ template "header" . }}
 </head>
 <body>
   <div id="fb-root"></div>
