--- a/internal/templates/pages/posts.html
+++ b/internal/templates/pages/posts.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {{ template "header" .Header }}
+  {{ template "header" . }}
 </head>
 <body>
   {{ template "navbar" . }}
