--- a/internal/templates/cms/edit_post.html
+++ b/internal/templates/cms/edit_post.html
@@ -2,11 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {{ template "header" .Header }}
+  {{ template "header" . }}
 </head>
 <body>
   {{ template "cmsNavbar" . }}
   <div class="main-content">
+    {{ if .Errors }}
+      <div class="alert alert-error">There were errors when saving the post!</div>
+    {{end}}
     <h1>{{ if has .Request.URL.Path "edit"}}Edit{{else}}New{{end}} Post</h1>
     <form target="{{.Request.URL.Path}}" method="POST" id="post-form">
       <div class="form-group row">
@@ -47,9 +50,6 @@
         <div class="col-sm-3">
         </div>
         <div class="col-sm-9">
-          <input type="hidden" name="actionValue" value=""/>
-          <input type="hidden" name="postID" value=""/>
-          <input type="hidden" name="publishTime" value=""/>
           <button data-value="0" class="btn submit-btn btn-primary">Save</button>
           <button data-value="1" class="btn submit-btn btn-warning">Save and Publish Later</button>
           <button data-value="2" class="btn submit-btn btn-success">Save and Publish Now</button>
