--- a/internal/templates/cms/login.html
+++ b/internal/templates/cms/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {{ template "header" .Header }}
+  {{ template "header" . }}
 </head>
 <body>
   {{ template "cmsNavbar" . }}
@@ -16,17 +16,17 @@
         </button>
       </div>
     {{end}}
-    <form target="/login" method="POST">
+      <form action="/login" method="POST">
       <div class="form-group row">
         <label for="username" class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" name="username" class="form-control" placeholder="Username">
         </div>
       </div>
       <div class="form-group row">
         <label for="password" class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
-          <input type="password" class="form-control">
+          <input type="password" name="password" class="form-control">
         </div>
       </div>
       <div class="form-group row">
