added an override for the gzip writer

--- a/internal/sass/main.scss
+++ b/internal/sass/main.scss
@@ -24,6 +24,7 @@
     }
 
     .welcome-intro {
+      margin-bottom: 1em;
       background-color: #ddd;
       padding: 1.5em;
       border-radius: 1em;
