Added latex parser and also fixed a bug with post retrieval

--- a/internal/templates/cms/edit_post.html
+++ b/internal/templates/cms/edit_post.html
@@ -111,6 +111,7 @@
         hljs.highlightBlock(a);
       })
       $(".preview").modal("show");
+      MathJax.Hub.Typeset(); //reload the math
       e.preventDefault();
     })
   </script>
