--- a/internal/templates/common/footer.html
+++ b/internal/templates/common/footer.html
@@ -3,6 +3,9 @@
 <script src="/static/js/jquery.slim.min.js"></script>
 <script src="/static/js/tether.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/go.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
