--- a/internal/templates/common/header.html
+++ b/internal/templates/common/header.html
@@ -2,6 +2,6 @@
 <meta name="viewport" content="width=320, initial-scale=1">
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/foundation.min.css">
 <title>{{ .Header.Title }}</title>
 {{ end }}
