adjusted the about me page

--- a/internal/templates/pages/about_me.html
+++ b/internal/templates/pages/about_me.html
@@ -28,8 +28,10 @@
     <p class="narrative">
       With the free time I had, I had tried many new things. I went downhill mountain biking in Angelfire, NM,
       met up with old friends in Arizona, and even got my skydiving license in Rosharon, Texas at Skydive
-      Spaceland (I'm still active btw and jump out of Skydive Elsinore)! After my partying was done, I decided
-      to move out to southern California to try my hand at biosciences once again. I was saddened to find out
+      Spaceland (I'm still active btw and jump out of Skydive Elsinore)! To supplement my income during this time I took some
+      odd jobs in programming; usually this was simple web development with some fun systems programming sprinkled in.
+      After my partying was done, I decided to move out to southern California to try my
+      hand at biosciences once again. I was saddened to find out
       <image src="/static/images/skydive_head.png" class="about__image round pull-xs-left"/>
       that while the businesses are certainly making money down here, not much of that is seen by scientific
       staff, save for a few senior-level scientists that made about $25/hr. I was able to find a job at a local
@@ -38,9 +40,11 @@
     </p>
     <p class="narrative">
       I decided that since I still was pretty strong in programming I would use my free time to get acquainted with
-      the ins and outs of software development. It was tiring, but every week I was spending 2-4 hours a day learning
-      a new algorithm from the classic Intro to Algorithms book, or learning the nuances of design patterns. Still,
-      it was fun! There was always a new problem to solve and this is what I crave; problems! My first major project
+      the ins and outs of software development as well as take a few jobs. Again this was mostly web development, although one project I
+      got to take part in was a pretty cool chat project that involved some low-level net programming. Unfortunately I found that I was
+      a bit rusty on some algorithms and common patterns. It was tiring, but every week I was spending 2-4 hours a day re-learning
+      algorithms from the classic Intro to Algorithms book, or learning the nuances of design patterns. Still,
+      it was fun! There was always a new problem to solve and this is what I crave; problems! My first serious long-term project
       ended up being an altimeter, for which I developed the firmware. It worked well and I learned first hand the
       challenges of dealing with limited resources and picking algorithms optimized to both time and memory constraints.
       <image src="/static/images/tinkering.png" class="about__image round pull-xs-right"/>
